# BD2-Projeto

./: README.md
attachments/: BD2_ER.drawio
src/: pyproject.toml
src/config/: settings.py  urls.py
src/projeto/: forms.py  models.py  urls.py  views.py
src/projeto/migrations/: 0001_initial.py
src/projeto/templates/: base.html  base_authenticated.html  group.html  groups.html  index.html  login.html
src/projeto/templates/posts/: create.html
