[tool.poetry]
name = "BD2-Projeto"
version = "0.1.0"
description = ""
authors = ["danielalmeida1481 <daniel58almeida@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0"
djongo = "^1.3.6"
pytz = "^2021.3"
Pillow = "^9.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
